button text still not rendering center on Iphone in modals, hopefully padding fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,7 @@ body {
 /*------------------ buttons ---------------------*/
 
 .btn--size-lg {
+    padding: 0;
     width: 150px;
     height: 100px;
     margin: 20px auto 20px auto;
